--- a/public/webcomponents/result-list-item.html
+++ b/public/webcomponents/result-list-item.html
@@ -1,15 +1,19 @@
 <template id="result-list-item-template">
-  <style>
-    
-  </style>
+  <style></style>
+  <li>
+    <code>
+      <content></content>
+    </code>
+  </li>
 </template>
 <script>
+  var resultListItemDocument = document.currentScript.ownerDocument;
   window.ResultListItem = (function () {
 
     var ResultListItemPrototype = Object.create(HTMLLIElement.prototype);
 
     ResultListItemPrototype.createdCallback = function () {
-      var template = document.getElementById('result-list-item-template');
+      var template = resultListItemDocument.getElementById('result-list-item-template');
       var clone = document.importNode(template.content, true);
       var shadowRoot = this.createShadowRoot();
       shadowRoot.appendChild(clone);
@@ -18,5 +22,6 @@
     return document.registerElement('result-list-item', {
       prototype: ResultListItemPrototype
     });
+
   })();
 </script>
