--- a/public/webcomponents/result-list.html
+++ b/public/webcomponents/result-list.html
@@ -2,12 +2,13 @@
   
 </template>
 <script>
+  var resultListDocument = document.currentScript.ownerDocument;
   window.ResultList = (function () {
 
     var ResultListPrototype = Object.create(HTMLUListElement.prototype);
 
     ResultListPrototype.createdCallback = function () {
-      var template = document.getElementById('result-list-template');
+      var template = resultListDocument.getElementById('result-list-template');
       var clone = document.importNode(template.content, true);
       var shadowRoot = this.createShadowRoot();
       shadowRoot.appendChild(clone);
@@ -16,5 +17,6 @@
     return document.registerElement('result-list', {
       prototype: ResultListPrototype
     });
+
   })();
 </script>
