--- a/public/webcomponents/result-list-item.html
+++ b/public/webcomponents/result-list-item.html
@@ -1,5 +1,10 @@
 <template id="result-list-item-template">
-  <style></style>
+  <style>
+  li {
+    list-style: none;
+    margin: 0.3rem 0;
+  }
+  </style>
   <li>
     <code>
       <content></content>
