--- a/public/webcomponents/result-list.html
+++ b/public/webcomponents/result-list.html
@@ -1,5 +1,5 @@
 <template id="result-list-template">
-  
+  <ul><content></content></ul>
 </template>
 <script>
   var resultListDocument = document.currentScript.ownerDocument;
