replace ul+li with div

--- a/public/webcomponents/result-list-item.html
+++ b/public/webcomponents/result-list-item.html
@@ -1,15 +1,14 @@
 <template id="result-list-item-template">
   <style>
-  li {
-    list-style: none;
-    margin: 0.3rem 0;
-  }
+    div {
+      margin: 0.3rem 0;
+    }
   </style>
-  <li>
+  <div>
     <code>
       <content></content>
     </code>
-  </li>
+  </div>
 </template>
 <script>
   var resultListItemDocument = document.currentScript.ownerDocument;
