--- a/public/webcomponents/result-list.html
+++ b/public/webcomponents/result-list.html
@@ -1,5 +1,7 @@
 <template id="result-list-template">
-  <ul><content></content></ul>
+  <div>
+    <content></content>
+  </div>
 </template>
 <script>
   var resultListDocument = document.currentScript.ownerDocument;
