Add line number

--- a/public/webcomponents/result-list-item.html
+++ b/public/webcomponents/result-list-item.html
@@ -1,8 +1,8 @@
 <template id="result-list-item-template">
   <style>
-    div {
-      margin: 0.3rem 0;
-    }
+  div {
+    overflow: hidden;
+  }
   </style>
   <div>
     <code>
