Change error color

--- a/public/webcomponents/result-list-item.html
+++ b/public/webcomponents/result-list-item.html
@@ -4,13 +4,13 @@
     overflow: hidden;
   }
   :host([unused]) {
-    color: #ccf;
+    color: indianred;
   }
   :host([duplicated]) {
-    color: #cfc;
+    color: goldenrod;
   }
   :host([unused][duplicated]) {
-    color: #fcc;
+    color: indianred: ;
   }
   </style>
   <div>
