--- a/src/webcomponents/result-list-item.html
+++ b/src/webcomponents/result-list-item.html
@@ -10,10 +10,10 @@
     :host([unused]) {
       color: indianred;
     }
-    :host([duplicated]) {
+    :host([duplicate]) {
       color: goldenrod;
     }
-    :host([unused][duplicated]) {
+    :host([unused][duplicate]) {
       color: indianred ;
     }
     code {
